fixed issue with overflow on hero modal

--- a/src/styles/components/_hero-modal.scss
+++ b/src/styles/components/_hero-modal.scss
@@ -18,10 +18,10 @@
   &__content {
     margin: 5rem 10rem 5rem 10rem;
     flex-grow: 1;
-    border-radius: 2rem;
+    border-radius: 2rem 2rem 2rem 2rem;
     display: flex;
     justify-content: center;
-    overflow: scroll;
+    overflow: hidden;
 
     &--open {
       animation: zoomIn $hero-modal-enter both;
@@ -44,6 +44,7 @@
     opacity: 0;
     display: flex;
     padding: 5px;
+    cursor: pointer;
 
     &--open {
       animation: fadeInUp $hero-modal-enter ease-in both;
