--- a/src/styles/components/_summary.scss
+++ b/src/styles/components/_summary.scss
@@ -1,7 +1,9 @@
 .summary{
   &__container{
     width: 140rem;
-    padding: 2rem;
+    margin: 2rem;
+    overflow: scroll;
+
   }
   &__content {
   }
